[gd_scene load_steps=20 format=2]

[ext_resource path="res://Door.gd" type="Script" id=1]
[ext_resource path="res://Nodes/SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/animated_wooden_castle_door.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "close",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "is_open",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "open",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "is_closed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 29.9359, 32.6953 )

[node name="Door" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="darkbackground" type="AnimatedSprite" parent="." index="1"]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "close"
frame = 3
playing = true

[node name="Frame" type="AnimatedSprite" parent="." index="3"]
scale = Vector2( 2, 2 )
frames = SubResource( 15 )

[node name="Area2D" type="Area2D" parent="." index="4"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 16 )

[node name="ActionText" type="Label" parent="." index="5"]
visible = false
margin_left = -53.8575
margin_top = -79.7216
margin_right = 59.1425
margin_bottom = -65.7216
text = "Press \"E\" to enter"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
